--- a/app/dashboard/parent/chores/assign/template.hbs
+++ b/app/dashboard/parent/chores/assign/template.hbs
@@ -5,7 +5,7 @@
   {{md-select content=model.children
     value=formValues.childId
     label="Child"
-    prompt="Please choose a RugRat..."
+    prompt="Please choose a Child..."
     optionLabelPath="content.username"
     optionValuePath="content.id" class="col s12"}}
 
