--- a/app/dashboard/child/template.hbs
+++ b/app/dashboard/child/template.hbs
@@ -1,4 +1,4 @@
-<div class="dashboard-container">
+<div class="dashboard-container box ">
   <div class="dashboard-container_items">
     <h2 class="dashboard-text dashboard-item"></h2>
   </div>
@@ -12,12 +12,11 @@
     {{#link-to "logout"}}
       <button class="waves-effect waves-light btn">logout</button>
     {{/link-to}}
-</div>
 
 <div class="row">
   <div class="col s12 m4 l3">
 {{!-- <div class="content-container"> --}}
-  <div class="sidebar">
+  <div class="sidebar card">
     <div class="sidebar-content">
       <h2>{{model.username}}</h2>
       <h2>{{model.pointTotal}}</h2>
@@ -28,7 +27,9 @@
 
 <div class="col s12 m8 l9">
   <div class="child-items">
-    {{outlet}}
+    <div class="card">{{outlet}}</div>
 </div>
 </div>
+</div>
+
 </div>
