--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -1,15 +1,16 @@
-  <div class="boss-box">
-  <div class="text-box"><h2>Welcome to Kids Chores!!</h2></div>
+<div class="box">
+  <div class="text-box">
+    <h2>Welcome to Kids Chores!!</h2></div>
   <div class="main-box">
-  <div class="parent-box">
-    {{#link-to "login"}}
-    <button class="waves-effect waves-light btn">Parent login</button>
-    {{/link-to}}
+    <div class="parent-box">
+      {{#link-to "login"}}
+        <button class="waves-effect waves-light btn">Parent login</button>
+      {{/link-to}}
+    </div>
+    <div class="child-box">
+      {{#link-to "login-child"}}
+        <button class="waves-effect waves-light btn">Child login</button>
+      {{/link-to}}
+    </div>
   </div>
-  <div class="child-box">
-    {{#link-to "login-child"}}
-    <button class="waves-effect waves-light btn">Child login</button>
-    {{/link-to}}
-  </div>
-</div>
 </div>
