--- a/app/login-child/template.hbs
+++ b/app/login-child/template.hbs
@@ -1,7 +1,7 @@
 {{!-- <div class="big-container"> --}}
-<div class="row">
+<div class="row box">
   <div class="col s12 m4 l4">
-<div class="child-login-form">
+<div class="child-login-form card">
   {{#simple-form class="form-field" onsubmit=(action loginChild) as |formValues|}}
     <h2>Child Login</h2>
     <p class="form-inputs">
