--- a/app/login/template.hbs
+++ b/app/login/template.hbs
@@ -1,7 +1,7 @@
 {{!-- <div class="big-container"> --}}
-  <div class="row">
+  <div class="row box">
     <div class="col s12 m4 l4">
-  <div class="parent-login-form">
+  <div class="parent-login-form card">
     {{#simple-form class="form-field" onsubmit=(action loginParent) as |formValues|}}
       <h2>Parent Login</h2>
       <p class="form-inputs">
