--- a/app/dashboard/parent/template.hbs
+++ b/app/dashboard/parent/template.hbs
@@ -1,4 +1,3 @@
-
 <div class="parent-header">
   {{!-- <h2>Parent Header</h2> --}}
   <div class="button-box">
@@ -19,30 +18,25 @@
       <button class="waves-effect waves-light btn">Reward</button>
     {{/link-to}}
     {{#link-to "logout"}}
-    <button class="waves-effect waves-light btn">Log Out</button>
+      <button class="waves-effect waves-light btn">Log Out</button>
     {{/link-to}}
   </div>
 </div>
-<div class="row">
-<div class="col s12 m4 l3">
-{{!-- <div class="content-container"> --}}
-  <div class="sidebar">
-    <div class="sidebar-content">
-      <h2>Parent Dashboard</h2>
-      {{#link-to "dashboard.parent.children.index"}}<button class="waves-effect waves-light btn">Child List</button>{{/link-to}}
-
+<div class="row box">
+  <div class="col s12 m4 l3">
+    {{!-- <div class="content-container"> --}}
+    <div class="sidebar card">
+      <div class="sidebar-content">
+        <h2>Parent Dashboard</h2>
+        {{#link-to "dashboard.parent.children.index"}}
+          <button class="waves-effect waves-light btn">Child List</button>
+        {{/link-to}}
+      </div>
     </div>
-
   </div>
-</div>
-<div class="col s12 m8 l9">
-  <div class="main-content">
-    <div class="main-items">
+  <div class="col s12 m8 l9">
+    <div class="card">
       {{outlet}}
-      <img src="" alt="">
-
     </div>
   </div>
-</div>
-</div>
-{{!-- </div> --}}
+  </div>
