--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -18,7 +18,6 @@ $roboto-font-path: '../assets/';
 
 
 .header-container {
-
   color: white;
   background: #541D37;
 }
@@ -28,11 +27,15 @@ $roboto-font-path: '../assets/';
   justify-content: center;
 }
 
-.boss-box {
-  background: #e2f1f6;
+.box {
+  position: relative;
+  margin-bottom: 0;
   padding-top: 2rem;
   padding-bottom: 4rem;
-  box-shadow: 10px 5px 5px black;
+  background: url('/polkadot.jpg');
+  box-shadow: 2px 2px 10px black;
+
+  z-index: 1;
 }
 
 .text-box {
@@ -40,19 +43,26 @@ $roboto-font-path: '../assets/';
 
 }
 
-.main-box {
-
+.card {
+  background: #e2f1f6;
+  padding: 1rem;
 }
 
 .button-box {
   display: flex;
+
   justify-content: space-between;
   padding-right: 5rem;
   padding-left: 5rem;
 
+  .btn {
+    border-radius: 0;
+  }
 }
 
 .about-container {
-  color: white;
+  padding: 3rem 0;
   background: #541D37;
+  color: white;
+  overflow: auto;
 }
